# mc_mujoco

robots/: CMakeLists.txt
robots/chair/: CMakeLists.txt
robots/chair/mc_mujoco/: chair.in.yaml
robots/chair/meshes/: back_support.stl  chair.stl  chairfull.stl  left_handle.stl  leg_fl.stl  leg_fr.stl  leg_rl.stl  leg_rr.stl  right_handle.stl
robots/chair/xml/: chair.urdf  chair.xml
src/: mj_configuration.h  mj_sim.cpp  mj_sim_impl.h  mj_utils_merge_mujoco_models.cpp
